# pywifi

./: DOC.md  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  lint-and-test.yml
pywifi/: __init__.py  _wifiutil_linux.py  _wifiutil_win.py  cli.py  const.py  iface.py  profile.py  wifi.py
tests/: pywifi_test.py  test_cli.py
