[project]
name = "pywifi"
version = "1.1.12"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "comtypes>=1.4.11",
    "typer>=0.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "FA100",
    "FA102",
    "TRY003",
    "D400",
    "D415",
    "RUF012",
    "B019",
    "TD003",
    "G004",
    "EM101",
    "EM102",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ANN401"]
"pywifi/*" = ["PT019"]

[project.scripts]
pywifi = "pywifi.cli:app"

[tool.uv]
package = true
